fix portrait verticall align

--- a/style.css
+++ b/style.css
@@ -154,12 +154,12 @@ p {
         width: 100%;
     }
 
-    .sticks {
+    .portrait-left {
         max-width: 600px;
         padding: 0px 0px 20px 0px;
     }
 
-    .log {
+    .portrait-right {
         max-width: 600px;
         padding: 20px 0px 0px 0px;
     }
